spade-tests/src/snapshots/spade_tests__ast_lowering__missing_associated_types_are_rejected.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait Trout {
    type Inner;
}

impl Trout for bool {}


error: Missing associated types `Inner`
  ┌─ testinput:5:1
  │
5 │ impl Trout for bool {}
  │ ^^^^^^^^^^^^^^^^^^^^^^ Missing definition of `Inner` in this impl block
